--- a/items/templates/items/pag_subs_category/items_material_consumo.html
+++ b/items/templates/items/pag_subs_category/items_material_consumo.html
@@ -40,7 +40,7 @@
         </div>
       </form>
     {% else %}
-        <p class="notifications_no_items">Não há itens associados a categoria <strong>Material de consumo</strong>.</p>
+        <p class="notifications_no_items">Não há itens associados a sub-categoria <span>Material de consumo</span>.</p>
     {% endif %}
     <a href="{% url 'items_main' %}" class="btn btn-delete">Voltar para página inicial</a>
   </div>
