--- a/items/staticfiles/css/items_form.css
+++ b/items/staticfiles/css/items_form.css
@@ -11,7 +11,7 @@ main {
   margin: 50px;
   padding: 20px;
   border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 1px 8px 8px rgba(0, 0, 0, 0.1);
 }
 
 .container h1 {
