--- a/items/staticfiles/css/items_sub.css
+++ b/items/staticfiles/css/items_sub.css
@@ -38,6 +38,10 @@ main {
   font-weight: normal;
 }
 
+.container .expandable-list p span{
+  font-weight: bold;
+}
+
 .container .expandable-list .item {
   border: 1px solid #ccc;
   margin-bottom: 10px;
