--- a/items/staticfiles/css/login.css
+++ b/items/staticfiles/css/login.css
@@ -9,14 +9,14 @@ main {
 
 main .container-main {
   width: 80%;
-  max-width: 600px;
-  height: auto;
+  max-width: 900px;
+  gap: 20px;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 1px 8px 8px rgba(0, 0, 0, 0.1);
+  padding: 40px;
 }
 
 .container-main h1 {
