atualização de historico & separação de informações entre editado, criado e retirado

--- a/items/templates/items/itemsAuditLog.html
+++ b/items/templates/items/itemsAuditLog.html
@@ -23,8 +23,8 @@
             {% for log in logs %}
                 <tr>
                     <td>{{ log.action }}</td>
-                    <td>{{ log.item.name }}</td>
-                    <td>{{ log.user.username }}</td>
+                    <td>{{ log.item_deletado}}</td>
+                    <td>{{ log.user }}</td>
                     <td>{{ log.timestamp }}</td>
                     <td>{{ log.observation }}</td>
                 </tr>
