--- a/items/templates/items/itemsAuditLog.html
+++ b/items/templates/items/itemsAuditLog.html
@@ -31,7 +31,7 @@
                 <tr>
                     <td>{{ log.action }}</td>
                     <td>{{ log.item_deletado }}</td>
-                    <td>{{ log.user }}</td>
+                    <td>{{log.user.username }}</td>
                     <td>{{ log.timestamp }}</td>
                     <td>{{ log.observation }}</td>
                 </tr>
